log
Sun Mar 13 14:31:20 HSP 2022: 
 tests:  0|7
total_score: 0/70
ae7aa23
Sun Mar 13 14:32:03 HSP 2022: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
07f91cb
Sun Mar 13 18:28:40 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
8f7c1fc
Sun Mar 13 18:32:36 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c93fb64
Sun Mar 13 18:39:42 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:42:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    for(int i = &primeraPosicion ; i < n ; i++){
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
c5cc175
Sun Mar 13 18:43:05 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
68d0ae0
Sun Mar 13 18:51:03 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0f58a07
Sun Mar 13 18:52:31 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c33d142
Sun Mar 13 20:45:27 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
64994c4
Sun Mar 13 20:48:31 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
e840a66
Sun Mar 13 20:54:39 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
afa2138
Sun Mar 13 21:11:56 HSP 2022: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:67:16: error: statement with no effect [-Werror=unused-value]
    datosPersona->edad;
    ~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
37ea79a
Sun Mar 13 21:12:47 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ade3502
Sun Mar 13 21:13:47 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5b3fa4c
Sun Mar 13 21:14:20 HSP 2022: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:45:11: error: 'return' with a value, in function returning void [-Werror]
    return suma;
           ^~~~
exercises.c:39:6: note: declared here
 void sumaNultimos(int a[], int n, int m, int *suma) {
      ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7ec782
Sun Mar 13 21:17:15 HSP 2022: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
97734a8
Sun Mar 13 21:22:10 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
c45ffb8
Sun Mar 13 21:26:27 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
45c30ab
Sun Mar 13 21:34:07 HSP 2022: 
 exercises.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:88:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return v.datos;
           ~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
790c10d
Sun Mar 13 21:41:45 HSP 2022: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
45f81a1
Sun Mar 13 21:42:45 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f5f2667
Sun Mar 13 21:44:54 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:88:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int largo = v->datos;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
a66501b
